[gd_scene load_steps=6 format=2]

[ext_resource path="res://Human/human.tscn" type="PackedScene" id=1]
[ext_resource path="res://SternerRegnix.gd" type="Script" id=2]
[ext_resource path="res://Assets/sfx/deathscream1.wav" type="AudioStream" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.256196, 0.793259, 0.412134 )

[sub_resource type="ConvexPolygonShape" id=2]
points = PoolVector3Array( 0, 1, 0, -10, 0, -10, -10, 2, -10, 10, 0, -10, 10, 2, -10 )

[node name="SternerRegnix" type="KinematicBody"]
script = ExtResource( 2 )

[node name="Human" parent="." instance=ExtResource( 1 )]
transform = Transform( -0.3, 0, -9.77524e-08, 0, 0.3, 0, 9.77524e-08, 0, -0.3, 0, 0.117458, 0 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.787803, 0 )
shape = SubResource( 1 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 2 )

[node name="ShootTimer" type="Timer" parent="."]
autostart = true

[node name="Muzzle" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000785261, 1.17649, -0.794761 )

[node name="Audio_Scream" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
